app/assets/stylesheets/components/forms/_markdown_editor.css.sass
$markdown-editor-height: 125px
$markdown-guide-height: 25px

.cf-markdown-editor
  position: relative

.markdown-toolbar,
.markdown-modeswitch
  border-bottom: 1px solid $dark-rule
  position: absolute
  top: 7px
  left: 1px
  right: 1px
  padding: 1px 4px

.markdown-modeswitch
  left: auto
  border: none

.markdown-preview
  border: 1px solid $light-rule
  +border-radius
  padding: 7px
  min-height: $markdown-editor-height
  p:first-child
    margin-top: 0

.field-with-toolbar,
.form-controls .field-with-toolbar
  padding-top: 25px + 7px + 7px

.toolbar-button
  width: 36px
  height: 23px
  background-repeat: no-repeat
  background-position: center
  background-size: 50%
  display: inline-block
  +border-radius(3px)
  cursor: pointer
  &:hover
    background-color: lighten($light-gray, 20%)

.md-right-button
  display: block
  float: right

.markdown-textarea,
.form-controls .markdown-textarea
  +border-radius(3px 3px 0 0)
  min-height: $markdown-editor-height
  border-bottom: none


.md-bold-icon
  background-image: image_url('markdown/bold.png')
.md-italic-icon
  background-image: image_url('markdown/italic.png')
.md-h1-icon
  background-image: image_url('markdown/h1.png')
.md-h2-icon
  background-image: image_url('markdown/h2.png')
.md-h3-icon
  background-image: image_url('markdown/h3.png')
.md-hr-icon
  background-image: image_url('markdown/hr.png')
.md-quote-icon
  background-image: image_url('markdown/quote.png')
.md-link-icon
  background-image: image_url('markdown/link.png')
.md-ul-icon
  background-image: image_url('markdown/ul.png')
.md-ol-icon
  background-image: image_url('markdown/ol.png')
.md-code-icon
  background-image: image_url('markdown/code.png')
.md-preview-icon
  background-image: image_url('markdown/preview.png')
.md-edit-icon
  background-image: image_url('markdown/edit.png')

.markdown-guide-hint
  position: absolute
  top: 0
  left: 0
  right: 0
  height: $markdown-guide-height
  background-color: $lightest-gray
  border-bottom: 1px solid $light-gray
  padding: 3px 7px
  cursor: pointer
  color: $dark-gray
  border-top: 1px solid $light-gray
  &:hover
    background-color: darken($lightest-gray, 10%)
  .toggle-collapse
    float: right


.cf-markdown-guide
  position: relative
  height: $markdown-guide-height
  border: 1px solid $light-gray
  +border-radius(0 0 3px 3px)
  border-top: none
  overflow: hidden
  margin-bottom: 10px
  &.open
    height: 300px

.markdown-guide-nav
  position: absolute
  top: $markdown-guide-height
  left: 0
  bottom: 0
  width: 20%
  +plain-list
  font-weight: bold
  background-color: $lightest-gray
  overflow: hidden
  li
    cursor: pointer
    color: $dark-gray
    padding: 5px
    border-bottom: 1px solid $light-gray
  li:hover:not(.active)
    background-color: darken($lightest-gray, 10%)
  li.active
    color: white
    background-color: $blue

.markdown-guide-main
  position: absolute
  top: $markdown-guide-height
  right: 0
  bottom: 0
  width: 80%
  overflow-y: auto
  padding: 10px
  +box-shadow(-1px 0px 4px rgba(0,0,0,0.3))

